# flippatch

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: AGENTS.src.md  Patches.md
patches/: 0001-prototype-tags.yaml  0002-stern-catalog.yaml  0003-stern-ipdb.yaml  0004-production-status.yaml  0005-production-statuses-and-prototypes.yaml  0006-flip-prototypes.yaml  0007-aftermarket-and-retheme-vocab.yaml  0008-retheme-aftermarket.yaml  0009-game-format-vocab.yaml  0010-game-formats.yaml  0011-game-formats.yaml  0012-citation-sources-web.yaml  0013-corporate-entity-years.yaml  0014-il-suburb-locations.yaml  0015-corporate-entity-locations.yaml  0016-dennard-williams.yaml  0017-dennard-williams-ipdb.yaml  0018-chicago-coin-dedup.yaml  0019-delete-chicago-coin-machinery.yaml  0020-recat-vocab-to-catalog.yaml  0021-recat-game-format-descriptions.yaml  0022-recat-tag-descriptions.yaml  0023-retract-flip-museum-misattributions.yaml  0024-bally-wulff-berlin.yaml  0025-split-stray-early-firms.yaml  0026-split-stray-early-firms-ipdb.yaml  0027-legends-of-valhalla-year.yaml  0028-united-corporate-entity-years.yaml  0029-corporate-entity-years.yaml  0030-em-firm-years.yaml  0031-maker-operating-status.yaml  0032-locations-create-1.yaml  0033-locations-create-2.yaml  0034-locations-create-3.yaml  0035-corporate-entity-locations.yaml  0036-manufacturer-descriptions.yaml  0037-model-descriptions.yaml  0038-model-game-formats.yaml  0039-locations-1.yaml  0040-locations-2.yaml  (+24 more)
patches/authoring/: patchkit.py
patches/authoring/0010-game-formats/: README.md  classify.py  gen.py  worksheet.csv  xref_sweep.py
patches/authoring/0011-game-formats/: README.md  classify.py  gen.py  worksheet.csv
patches/authoring/0029-corporate-entity-years/: README.md  gen.py  worksheet.csv
patches/authoring/0030-em-firm-years/: README.md  gen.py  worksheet.csv
patches/authoring/0031-maker-operating-status/: README.md  classify.py  gen.py
patches/authoring/0042-japanese-makers/: README.md  gen.py  worksheet.csv
patches/authoring/0043-japanese-models/: README.md  gen.py
schema/: patch.schema.json
scripts/cloud_store/: push_to_r2.py
scripts/patch_validation/: lint_patches.py  validate_patches.py
tests/: test_lint_patches.py  test_patchkit.py  test_push_to_r2.py  test_validate_patches.py
